Update project checksum and comment out upload settings in platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,6 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.9.3
 	paulstoffregen/Time@^1.6.1
 	hunamizawa/ESPPerfectTime@^0.3.0
-upload_protocol = espota
-upload_port = 192.168.178.60
+;upload_protocol = espota
+;upload_port = 192.168.178.60
 
